@@ -1,3 +1,3 @@
 package com.colegiovivas.lapandemia.actors;
 
-public enum ActorId { PLAYER, WALL, FAN, VIRUS, MASK }
+public enum ActorId { PLAYER, WALL, FAN, VIRUS, MASK, PAPER }
